--- a/css/addCar.css
+++ b/css/addCar.css
@@ -1,68 +1,76 @@
 body {
-	background-color: #14121b;
-	font-family: 'Roboto', sans-serif;
-	margin: 0;
-	padding: 0;
-	color: #ba89e4;
-	/* Set the text color */
-	overflow: hidden;
-	/* Prevent scrollbars due to particles */
+    background-color: #14121b;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #ba89e4;
+    overflow: hidden;
 }
 
-.login-section {
-	margin: 50px;
-	text-align: center;
-	position: relative;
-	z-index: 1;
-	/* Place the form on top of particles */
+.add-car-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #14121b;
+    position: relative; /* Added positioning */
 }
 
-.login-section h1 {
-	font-family: 'Roboto Mono', monospace;
-	font-size: 30px;
-	color: transparent;
-	text-transform: uppercase;
-	font-weight: 300;
-	text-align: center;
-	margin-bottom: 15px;
-	background: linear-gradient(to right, #ea98da, #6870f6);
-	-webkit-background-clip: text;
-	background-clip: text;
-	animation: animatedGradient 3s linear infinite, colorChange 3s linear infinite;
+.add-car-section h1 {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 30px;
+    color: transparent;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 15px;
+    background: linear-gradient(to right, #ea98da, #6870f6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: animatedGradient 3s linear infinite, colorChange 3s linear infinite;
 }
 
-.login-form {
-	background-color: rgba(255, 255, 255, 0.1);
-	padding: 20px;
-	border-radius: 10px;
-	text-align: left;
-	width: 80%;
-	max-width: 500px;
-	margin: 0 auto;
-	position: relative;
-	z-index: 2;
-	/* Place the form on top of particles */
+.car-form {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
-.login-form label,
-.login-form input,
-.login-form button {
-	display: block;
-	margin-bottom: 15px;
-	width: 100%;
+.car-form label,
+.car-form input,
+.car-form select,
+.car-form button {
+    display: block;
+    margin-bottom: 15px;
+    width: 100%;
 }
 
-.login-form button {
-	background: linear-gradient(to right, #ea98da, #6433E0);
+.car-form button {
+    background: linear-gradient(to right, #ea98da, #6433E0);
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-/* The particles container */
+.made-by {
+    font-size: 12px;
+    text-align: center;
+    color: #7d7c7e;
+    margin-top: -10px;
+}
+
 #particles-js {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 0;
-	/* Place particles behind the form */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
