--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ a.Login {
     padding: 14px 15px;
     border: 0px solid #000;
     border-radius: 10px;
-    margin-left: 10px; /* Add some margin */
+    margin-left: 10px;
+    /* Add some margin */
 }
 
 .addContent:hover,
@@ -47,8 +48,10 @@ a.Login:active {
 
 /* Additional styles for responsive table */
 .table-container {
-    max-width: 100%; /* Set maximum width to 100% */
-    overflow-x: auto; /* Add horizontal scroll when necessary */
+    max-width: 100%;
+    /* Set maximum width to 100% */
+    overflow-x: auto;
+    /* Add horizontal scroll when necessary */
 }
 
 /* Ensure table cells wrap content */
@@ -123,16 +126,30 @@ section {
     height: 300px;
     overflow-x: auto;
     margin-top: 0px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 table {
     width: 100%;
     table-layout: fixed;
+    border-spacing: 1px;
 }
 
-th {
+table tr:not(:last-child) {
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+table tr {
+    background-color: #14121b;
+}
+
+table tbody tr {
+    background-color: #14121b;
+}
+
+table th {
     padding: 20px 15px;
+    border-spacing: 0px;
     text-align: left;
     font-weight: 500;
     font-size: 12px;
@@ -141,14 +158,14 @@ th {
     background-color: #181621;
 }
 
-td {
-    padding: 15px;
+table td {
+    padding: 5px 0px;
+    padding: 20px 15px;
     text-align: left;
     vertical-align: middle;
     font-weight: 300;
     font-size: 12px;
     color: #fff;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
 /* for custom scrollbar for webkit browser */
@@ -196,7 +213,8 @@ a.Login {
     padding: 14px 15px;
     border: 0px solid #000;
     border-radius: 10px;
-    margin-left: 10px; /* Add some margin */
+    margin-left: 10px;
+    /* Add some margin */
 }
 
 .addContent:hover,
@@ -212,8 +230,10 @@ a.Login:active {
 
 /* Additional styles for responsive table */
 .table-container {
-    max-width: 100%; /* Set maximum width to 100% */
-    overflow-x: auto; /* Add horizontal scroll when necessary */
+    max-width: 100%;
+    /* Set maximum width to 100% */
+    overflow-x: auto;
+    /* Add horizontal scroll when necessary */
 }
 
 /* Ensure table cells wrap content */
@@ -276,4 +296,42 @@ table.dataTable.no-footer {
 table.dataTable.nowrap th,
 table.dataTable.nowrap td {
     white-space: nowrap;
+}
+
+@media screen and (max-width: 600px) {
+    .tbl-header {
+        background-color: transparent;
+    }
+    
+    table {
+        display: flex;
+    }
+
+    table thead,
+    table tbody {
+        display: flex;
+        flex: 1 1 auto;
+        flex-direction: column;
+    }
+
+    table td,
+    table th {
+        display: block;
+        flex: 1 1 auto;
+        text-align: center;
+        justify-content: center;
+        font-size: 14px;
+        padding: 5px 0px;
+    }
+
+    table tr {
+        display: flex;
+        flex-direction: column;
+        padding-top: 15px;
+        width: 100%;
+    }
+
+    table tr:not(:last-child) {
+        padding-bottom: 15px;
+    }
 }
